--- a/ice-makes.html
+++ b/ice-makes.html
@@ -68,7 +68,7 @@
           <h2>Ice Makes - Cube Type</h2>
         </div>
         <div class="row">
-          <img src="assets/img/portfolio-details/5.1.jpg" style="height: 400px;">
+          <img src="assets/img/portfolio-details/5.1.png" style="height: 400px;">
         </div>
       </section>
 
@@ -123,7 +123,7 @@
           <h2>Ice Maker</h2>
         </div>
         <div class="row">
-          <img src="assets/img/portfolio-details/5.2.jpg" style="height: 400px;">
+          <img src="assets/img/portfolio-details/5.2.png" style="height: 400px;">
         </div>
       </section>
 
@@ -175,7 +175,7 @@
           <h2>Ice Maker - Autumatic Snowflake Ice Machine</h2>
         </div>
         <div class="row">
-          <img src="assets/img/portfolio-details/5.3.jpg" style="height: 400px;">
+          <img src="assets/img/portfolio-details/5.3.png" style="height: 400px;">
         </div>
       </section>
 
