--- a/smart-fume-free-table.html
+++ b/smart-fume-free-table.html
@@ -63,7 +63,7 @@
 
     <section class="main-image">
       <div class="row">
-        <img src="assets/img/portfolio-details/mega-image-4.jpg" alt="">
+        <img src="assets/img/portfolio-details/mega-image-4.png" alt="">
         <h2>Smart Fume-Free Table Composition</h2>
       </div>
     </section>
@@ -80,33 +80,14 @@
             <div class="col-lg-6">
               <div class="member" data-aos="zoom-in" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/portfolio-details/4.1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio-details/4.1.png" class="img-fluid" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="member" data-aos="zoom-in" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/portfolio-details/4.2.jpg" class="img-fluid" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>  
-
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                <div class="pic">
-                  <img src="assets/img/portfolio-details/4.3.jpg" class="img-fluid" alt="">
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                <div class="pic">
-                  <img src="assets/img/portfolio-details/4.4.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio-details/4.2.png" class="img-fluid" alt="">
                 </div>
               </div>
             </div>
@@ -118,14 +99,33 @@
             <div class="col-lg-6">
               <div class="member" data-aos="zoom-in" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/portfolio-details/4.5.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio-details/4.3.png" class="img-fluid" alt="">
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="member" data-aos="zoom-in" data-aos-delay="100">
                 <div class="pic">
-                  <img src="assets/img/portfolio-details/4.6.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio-details/4.4.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>  
+
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                <div class="pic">
+                  <img src="assets/img/portfolio-details/4.5.png" class="img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                <div class="pic">
+                  <img src="assets/img/portfolio-details/4.6.png" class="img-fluid" alt="">
                 </div>
               </div>
             </div>
